# SOM-TUI

./: LICENSE  README.md  layout.tcss  main.py  pyproject.toml  requirements.txt  tui.py
src/SOM_TUI/: landing.tcss  layout.tcss  main.py  runny.py  tui.py
src/SOM_TUI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
