[project]
name = "SOM-TUI"
version = "4.1" 
dynamic = ["dependencies"]
description = "A TUI that lets you vote on SOM project through the terminal!"
authors = [{ name = "Yuva Nag", email="shreeyuva2020@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"SOM_TUI" = ["*.tcss"]

[project.urls]
homepage = "https://github.com/shreeyuvan2020/SOM-TUI"
repository = "https://github.com/shreeyuvan2020/SOM-TUI/issues"

[project.scripts]
vote = "SOM_TUI.runny:run"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"